# portfolio

./: .gitignore  3a.txt  Amar.java  CMakeLists.txt  ERR.py  _config.yml  a.txt  aboutme.md  amar.html  amarvim.cpp  ana.txt  blog.cpp  books  chess  coord.cpp  cpnotes  er4.py  index.html  interview  khud.cpp  leet.txt  leetconcepts.txt  missed.txt  mywork  posts.md  r.txt  rr.py  self.cpp  talks.md  test.py  test5.py  todo.txt  towriteblog  week.txt
_includes/: social-networks-links.html
_posts/: 2021-10-07-jump-game.md  2021-10-07-level-order-zig-zag.md  2021-10-07-majority-element.md  2021-10-07-sort-colors.md  2021-10-07-static-cast-is-not-compile-time.md  2021-10-07-traversals.md  2021-10-07-two-sum.md  2021-10-07-unique-pointer-part1.md  2022-03-06-sorts.md  2022-03-21-invariants-importance.md  2022-03-21-invariants-importantce.md  2022-03-21-what-is-ebo.md  2022-06-17-balanced-trees.md  2022-06-17-queues_cpp.md  2023-01-07-knapstack.md  2023-01-07-vex-parser.md  2023-03-09-decltype-quirks.md  2023-03-09-explicit-keyword.md  2023-03-11-permutation.md  2023-05-10-next-permutation.md  2023-06-19-shared-pointer.md  2024-02-14-knapstack.md  dict_python.md  list_python  maps_cpp.md  maps_java.md  pair.md  python.md  python_strings.md  queues_cpp.md  sets.md  setscpp.md  stacks_cpp.md  stringcpp.md  traversal.memory  trees.md  unordered_maps_cpp.md  vector.md
movebook/chapter8/: CMakeLists.txt  movechap8.cpp  valuescats.cpp
test_markdown/: amar.md  package-lock.json  package.json  queue.md  test.md
traits/concepts/: CMakeLists.txt  main.cpp
